--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -199,18 +199,14 @@ jobs:
 
       - name: Clone libundirect
         if: ${{ inputs.enable_ytuhd }}
-        run: |
-          if [ -d "$THEOS/include/libundirect" ]; then
-            echo "libundirect exists. Pulling latest changes..."
-            cd $THEOS/include/libundirect
-            git pull
-          else
-            echo "libundirect does not exist. Cloning repository..."
-            cd $THEOS/include
-            git clone --quiet --depth=1 https://github.com/opa334/libundirect.git
-          fi
+        run: git clone --quiet --depth=1 https://github.com/opa334/libundirect.git
         env:
           THEOS: ${{ github.workspace }}/theos
+      
+      - name: Install libundirect to Theos
+        run: |
+          cd libundirect
+          ./install_to_theos.sh
 
       - name: Download YouTube PlusPlus
         id: download_ytplpl
