--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
     steps:
       - name: List available SDKs
         run: xcodebuild -showsdks
-        
+
       - name: Checkout Main
         uses: actions/checkout@v4.1.1
         with:
@@ -207,7 +207,7 @@ jobs:
         run: |
           git clone --quiet --depth=1 https://github.com/opa334/libundirect.git
           cd libundirect
-          THEOS_PACKAGE_SCHEME=rootless ./install_to_theos.sh
+          THEOS_PACKAGE_SCHEME=rootless TARGET="iphone:clang:17.5:15.0" ./install_to_theos.sh
         
       - name: Download YouTube PlusPlus
         id: download_ytplpl
