--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -207,7 +207,8 @@ jobs:
         run: |
           git clone --quiet --depth=1 https://github.com/opa334/libundirect.git
           cd libundirect
-          THEOS_PACKAGE_SCHEME=rootless TARGET="iphone:clang:17.5:15.0" ./install_to_theos.sh
+          sed -i '' 's/TARGET := iphone:clang:16.2:15.0/TARGET := TARGET = iphone:clang:latest:15.0/' Makefile
+          THEOS_PACKAGE_SCHEME=rootless ./install_to_theos.sh
         
       - name: Download YouTube PlusPlus
         id: download_ytplpl
